<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movie"
        android:title="@string/title_movies" />

    <item
        android:id="@+id/navigation_series"
        android:icon="@drawable/ic_tv_series"
        android:title="@string/title_series" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_filled_favorite"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />

</menu>